--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cld image">
+    <img class="top-cloud" src="cloud.png" alt="cld image">
     <h1>I'm Nikita</h1>
   <h2 class ="pen"><p>a <span class="pro">pro</span>grammer</p></h2>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cld image">
-    <img src="images/mountain.png" alt="mountain-image">
+    <img class="bottom-cloud" src="cloud.png" alt="cld image">
+    <img src="mountain.png" alt="mountain-image">
   </div>
   <div class="middle-container">
     <div class="profile">
